# DesignPattern

./: .clang-format  .editorconfig  .gitignore  README.md
Practice_C++/: Practice_C++.sln
Practice_C++/Practice_C++/: CMakeLists.txt  Practice_C++.vcxproj  Practice_C++.vcxproj.filters  main  main.cpp
Practice_C++/Practice_C++/Chat/: ChatManager.h
Practice_C++/Practice_C++/Chat/src/: ChatManager.cpp
Practice_C++/Practice_C++/Client/: Facade.h
Practice_C++/Practice_C++/Client/src/: Facade.cpp
Practice_C++/Practice_C++/Component/: Activity.h  CMakeLists.txt  Component.h  Facade.h  Makefile  Map.h  Unit.h  User.h  cmake_install.cmake
Practice_C++/Practice_C++/Component/Map/: Map.h  MapProxy.h
Practice_C++/Practice_C++/Component/Unit/: Unit.h
Practice_C++/Practice_C++/Component/Unit/src/: Unit.cpp
Practice_C++/Practice_C++/Component/User/: User.h
Practice_C++/Practice_C++/Component/User/src/: User.cpp
Practice_C++/Practice_C++/Component/src/: Activity.cpp  Component.cpp  Facade.cpp  Map.cpp  Unit.cpp  User.cpp
Practice_C++/Practice_C++/Factory/: CMakeLists.txt  Factory.h  Makefile  cmake_install.cmake
Practice_C++/Practice_C++/Factory/Unit/: FactoryUnit.h
Practice_C++/Practice_C++/Factory/Unit/src/: FactoryUnit.cpp
Practice_C++/Practice_C++/Factory/src/: Factory.cpp  FactoryUnit.cpp
Practice_C++/Practice_C++/Type/: type.h
Practice_C++/Practice_C++/main.dSYM/Contents/Resources/DWARF/: main
Practice_C++/Practice_C++/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
Practice_C++/Practice_C++/x64/Debug/: vc143.idb
Practice_C++/Practice_C++/x64/Debug/Practice_C++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Practice_C++.lastbuildstate
